Fix long headings wrapping around their number

--- a/quarkdown-html/src/main/resources/render/theme/global.css
+++ b/quarkdown-html/src/main/resources/render/theme/global.css
@@ -425,6 +425,8 @@ body.quarkdown-paged:not(:has(.pagedjs_page)) {
     font-family: var(--qd-heading-font);
     margin: var(--qd-heading-margin);
     text-transform: none !important;
+    display: flex;
+    flex-direction: row;
 }
 
 .quarkdown-slides section > :is(h1, h2, h3, h4, h5, h6):first-child {
